--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <h1>Odin Recipes</h1>
-<a href="recipes/spaghetti.html">Spaghetti Recipe</a>
-
+<ul>
+    <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
+    <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+</ul>
 </html>
